--- a/ccyp/syb.html
+++ b/ccyp/syb.html
@@ -2,18 +2,20 @@
 PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="jp">
   
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="keywords" content="CIW, XHTML 1.0, Habitat for Humanity"/>
   <meta name="Description" content="Simple XHTML page for Habitat site"/>
+  <link rel="stylesheet"type="text/css" href="syb/syb.css"title="stylesheet"/>
+  
   <title>Habitat for Humanity International Summer Youth Blitz Program</title>
 </head>
 
 
-<body bgcolor="white">
+<body>
 
 
 Summer Bulid for Teen-agesに参加しよう。
