--- a/ccyp/syb.html
+++ b/ccyp/syb.html
@@ -17,9 +17,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 <body>
   
 
-<h1>Summer Bulid for Teen-agesに参加しよう。</h1>
+<h1>Summer Bulid for Teen-agersに参加しよう。</h1>
 <p>
-Summer Youth Blitzは、アメリカ中の16歳から18歳までの若者たちが、奉仕活動のために集まるユニークなプログラムです。<br/>参加者は、高校生から各種の青年団まで多岐にわたります。このプログラムでは、15人から20人程度の参加者と成年リーダーが、2週間という「電撃的な」速さで住居を作り上げます。
+  Summer Youth Blitzは、アメリカ中の16歳から18歳までの若者たちが、奉仕活動のために集まるユニークなプログラムです。<br/>参加者は、高校生から各種の青年団まで多岐にわたります。<br />このプログラムでは、15人から20人程度の参加者と成年リーダーが、2週間という「電撃的な」速さで住居を作り上げます。
 </p>
 <p>住居の建設は、ほとんどの参加者にとって不慣れな作業であり、この共通経験を通じて、<br />楽しみながら人間関係を築き、チームとしての絆を築くことができます。
 </p>
